[project]
name = "sn43"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"  # keep it compatible with Python 3.11
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.11",
    "bittensor>=9.9.0",
    "bittensor-cli>=9.10.1",
    "click>=8.0.0",
    "python-dotenv>=0.9.9",
    "fastapi>=0.110.1,<0.111.0",
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "requests>=2.32.5",
    "uvicorn>=0.23.0",          
    "matplotlib>=3.9.1,<4.0.0", 
    "numpy>=2.0.1,<2.1.0",
    "torch>=2.3.1,<2.4.0",      
    "osmium>=3.7.0,<4.0.0",     
    "huggingface-hub>=0.27.0,<0.28.0"
]

[project.scripts]
sn43 = "sn43.__main__:main"
neurons = "neurons:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sn43", "neurons", "envs", "graphite"]

[tool.uv.sources]
sn43 = { path = ".", editable = true }